--- a/morning-breif/2026-02-05/index.html
+++ b/morning-breif/2026-02-05/index.html
@@ -42,6 +42,10 @@ body::before{
 
 .wrap{max-width:920px;margin:0 auto;padding:0 18px;}
 
+@media (max-width: 480px){
+  .wrap{padding:0 16px;}
+}
+
 .hero{
   padding:18px 0 10px;
   background:transparent;
