Morning brief 2026-02-05 (increase mobile padding)

--- a/morning-breif/2026-02-05/index.html
+++ b/morning-breif/2026-02-05/index.html
@@ -42,8 +42,12 @@ body::before{
 
 .wrap{max-width:920px;margin:0 auto;padding:0 18px;}
 
+@media (max-width: 768px){
+  .wrap{padding:0 22px;}
+}
+
 @media (max-width: 480px){
-  .wrap{padding:0 16px;}
+  .wrap{padding:0 24px;}
 }
 
 .hero{
@@ -284,7 +288,7 @@ li.item:last-child{border-bottom:none;}
 
 <li class="item">
   <div class="title">
-    <div class="main"><a class="titlelink" href="https://www.cnbeta.com.tw/articles/tech/1548866.htm">美国和印度达成临时贸易协议 后者已同意停止购买俄罗斯石油</a></div>
+    <div class="main"><a class="titlelink" href="https://www.cnbeta.com.tw/articles/tech/1548940.htm">马斯克感叹“金钱买不到幸福” 引发上亿人围观</a></div>
 
     <div class="sub"><img class="favicon" src="https://www.google.com/s2/favicons?sz=64&amp;domain_url=https%3A//www.cnbeta.com.tw" alt="" loading="lazy"/> cnBeta</div>
   </div>
@@ -292,7 +296,7 @@ li.item:last-child{border-bottom:none;}
 
 <li class="item">
   <div class="title">
-    <div class="main"><a class="titlelink" href="https://www.cnbeta.com.tw/articles/tech/1548868.htm">被欧盟认定存在上瘾式设计 TikTok回应：调查结果完全错误</a></div>
+    <div class="main"><a class="titlelink" href="https://www.cnbeta.com.tw/articles/tech/1548942.htm">对话陶琳：特斯拉如何应对中国的“卷”</a></div>
 
     <div class="sub"><img class="favicon" src="https://www.google.com/s2/favicons?sz=64&amp;domain_url=https%3A//www.cnbeta.com.tw" alt="" loading="lazy"/> cnBeta</div>
   </div>
@@ -300,7 +304,7 @@ li.item:last-child{border-bottom:none;}
 
 <li class="item">
   <div class="title">
-    <div class="main"><a class="titlelink" href="https://www.cnbeta.com.tw/articles/tech/1548870.htm">韩国加密交易所Bithumb误向用户发送62万枚比特币</a></div>
+    <div class="main"><a class="titlelink" href="https://www.cnbeta.com.tw/articles/game/1548944.htm">GOG将原生支持Linux系统 原生客户端开发中</a></div>
 
     <div class="sub"><img class="favicon" src="https://www.google.com/s2/favicons?sz=64&amp;domain_url=https%3A//www.cnbeta.com.tw" alt="" loading="lazy"/> cnBeta</div>
   </div>
