fix(morning-brief): include raindrop section in swipe pagination

--- a/morning-breif/2026-02-13/index.html
+++ b/morning-breif/2026-02-13/index.html
@@ -541,7 +541,7 @@ li.item.flip-enter .title{transform:translateY(22px) rotateX(-10deg) scale(.985)
 
 <script>
 (() => {
-  const pages = Array.from(document.querySelectorAll('li.item'));
+  const pages = Array.from(document.querySelectorAll('li.item, .rd-section'));
   if (!pages.length) return;
 
   let lock = false;
